# django-squash

./: .black  .editorconfig  .gitignore  .travis.yml  README.rst  codecov.yml  pyproject.toml  setup.cfg  setup.py
.github/: zizmor.yml
.github/workflows/: _tests.yml  daily_tests.yml  nightly_tests.yml  release.yml  test.yml  tests.yml
django_squash/: __init__.py  apps.py  settings.py
django_squash/contrib/: postgres.py
django_squash/db/migrations/: autodetector.py  loader.py  operators.py  questioner.py  serializer.py  serializers.py  utils.py  writer.py
django_squash/management/commands/: circularmigrations.py  delete_squashed_migrations.py  restructure_migration_dependencies.py  squash_migrations.py
django_squash/management/commands/lib/: autodetector.py  loader.py  operators.py  writer.py
docs/: motivation.rst  settings.rst
tests/: conftest.py  manage.py  runtests.py  settings.py  test_internal_utils.py  test_migrations.py  test_migrations_autodetector.py  test_serializer.py  test_standalone.py  test_utils.py  test_writer.py  urls.py  utils.py
tests/app/: models.py  test_migrations.py
tests/app/test_dangling_leaf_migrations/: 0001_initial.py  0003_add_dob.py  0003_squashed.py
tests/app/test_delete_replaced_migrations/: 0004_squashed.py
tests/app/test_elidable_migrations/: 0002_person_age.py  0003_add_dob.py
tests/app/test_incorrect_name_migrations/: 3000_auto_20190518_1524.py  bad_no_name.py
tests/app/test_simple_migrations/: 0003_auto_20190518_1524.py
tests/app/tests/: test_migrations.py  test_serializer.py  test_utils.py  test_writer.py
tests/app/tests/migrations/dangling_leaf/: 0001_initial.py  0003_add_dob.py  0003_squashed.py
tests/app/tests/migrations/delete_replaced/: 0002_person_age.py  0003_add_dob.py  0004_squashed.py
tests/app/tests/migrations/elidable/: 0002_person_age.py  0003_add_dob.py
tests/app/tests/migrations/first/: 0001_initial.py
tests/app/tests/migrations/incorrect_name/: 2_person_age.py  3000_auto_20190518_1524.py  bad_no_name.py
tests/app/tests/migrations/lastest/: 0001_initial.py
tests/app/tests/migrations/pg_indexes/: 0001_initial.py  0002_use_index.py
tests/app/tests/migrations/pg_indexes_custom/: 0001_initial.py  0002_use_index.py
tests/app/tests/migrations/run_python_noop/: 0001_initial.py  0002_run_python.py
tests/app/tests/migrations/simple/: 0002_person_age.py  0003_auto_20190518_1524.py
tests/app/tests/migrations/swappable_dependency/: 0001_initial.py  0002_add_dob.py
tests/app/tests/migrations/xxx/: 0001_initial.py  0002_auto.py
tests/app2/: models.py
tests/app2/test_foreignKey_migrations/: 0001_initial.py
tests/app2/tests/migrations/first_last/: 0001_initial.py  0002_add_fields.py  0003_add_more_fields.py
tests/app2/tests/migrations/foreign_key/: 0001_initial.py
tests/app3/: models.py
tests/app3/test_moved_migrations/: 0003_moved.py
tests/app3/tests/migrations/moved/: 0001_initial.py  0002_person_age.py  0003_moved.py
tests/test_prj/: manage.py
tests/test_prj/test_prj/: asgi.py  settings.py  urls.py  wsgi.py
