[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django_squash"
version = "0.0.14"
description = "A migration squasher that doesn't care how Humpty Dumpty was put together."
readme = "README.rst"
keywords = ["django", "migration", "squashing", "squash"]
authors = [
    {name = "Javier Buzzi", email = "buzzi.javier@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    # See https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "django>=4.2",
]
requires-python = ">=3.9"

[project.optional-dependencies]
lint = [
    "pygments",
    "restructuredtext-lint",
    "ruff"
]
test = [
    "black",
    "build",
    "ipdb",
    "libcst",
    "psycopg2-binary",
    "pytest-cov",
    "pytest-django"
]

[project.urls]
homepage = "https://github.com/kingbuzzman/django-squash"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools]
zip-safe = true
platforms = ["any"]

[tool.ruff]
exclude = ["*migrations*", ".*", "/usr/local/lib", "dist", "venv"]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "D100",
    "D104",
    "D400",
]

[tool.ruff.lint.per-file-ignores]
"**/conftest.py" = [
    "B011",
    "D102",
    "D103",
    "D101",
    "D107",
    "D400",
    "D401",
    "D405",
    "D412",
    "D415",
    "DJ008",
    "E712",
    "EM101",
    "EM102",
    "FBT",
    "FURB177",
    "N806",
    "PLR0124",
    "PLR0913",
    "PLR2004",
    "PT007",
    "PT011",
    "PT015",
    "S",
    "SIM117",
    "SLF001",
    "PTH",
    "TRY002",
    "TRY003",
    "TRY301",
    "UP014",
    "LOG015",
    "PLC1901",
    "FURB157",
    "PLR0917",
]
"**/tests/*.py" = [
    "B011",
    "D102",
    "D103",
    "D401",
    "D101",
    "D107",
    "D400",
    "D405",
    "D412",
    "D415",
    "DJ008",
    "E712",
    "EM101",
    "EM102",
    "FBT",
    "FURB177",
    "N806",
    "PLR0124",
    "PLR0913",
    "PLR2004",
    "PT007",
    "PT011",
    "PT015",
    "S",
    "SIM117",
    "SLF001",
    "PTH",
    "TRY002",
    "TRY003",
    "TRY301",
    "UP014",
    "LOG015",
    "PLC1901",
    "FURB157",
    "PLR0917",
]

[tool.ruff.lint.isort]
order-by-type = true
force-sort-within-sections = true
required-imports = [
    "from __future__ import annotations",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
source = ["django_squash"]

[tool.coverage.report]
omit = ["*/migrations_*/*"]
show_missing = true
fail_under = 95

[tool.pypi]
repository = "https://upload.pypi.org/legacy/"
username = "kingbuzzman"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = "tests"
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
python_files = ["test_*.py", "*_tests.py"]

# Custom markers for pytest
markers = [
    "temporary_migration_module",
    "temporary_migration_module2",
    "temporary_migration_module3",
    "slow: marks tests as slow"
]

filterwarnings = [
    "error",

    # Internal warning to tell the user that the writer.py file has changed, and may not be compatible.
    "ignore:Django migrations writer file has changed and may not be compatible with django-squash",

    # Warning: django.utils.deprecation.RemovedInDjango50Warning: The USE_L10N setting is deprecated. Starting with Django 5.0, localized formatting of data will always be enabled. For example Django will display numbers and dates using the format of the current locale.
    # Don't specify the exact warning (django.utils.deprecation.RemovedInDjango50Warning) as not all version of Django know it and pytest will fail
    "ignore:The USE_L10N setting is deprecated:",

    # Warning: cgi is only being used by Django 3.2
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13",

    # Django 3.2 throws a warning about the USE_I18N setting being deprecated
    "ignore:datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects .*"
]
